V0.37.1 - Import rollback, validated YAML editing, trading stop date and lifetime entity limits
Resolve #230, #251, #252, #253

Co-Authored-By: Claude Opus 5.5 <noreply@anthropic.com>