@@ -79,6 +79,11 @@ import grafioschtrader.entities.Watchlist;
  * </ul>
  */
 public class MyDataExportDeleteDefinition {
+  // The instruments of the tenant's algo hierarchy. They are exported exactly like the instruments of a watchlist, so
+  // every query with a watchlist branch carries a matching branch over this join. The AlgoTop's own watchlist is
+  // already covered by the watchlist branches.
+  private static final String ALGO_SECURITY_FROM = AlgoTopAssetSecurity.TABNAME + " tas JOIN " + AlgoSecurity.TABNAME
+      + " a ON a.id_algo_assetclass_security = tas.id_algo_assetclass_security";
   private static String ALGO_RULE_STRATEGY_PARAM_SELDEL = String.format(
       "ap.* FROM %s ap JOIN %s ars ON ap.id_algo_rule_strategy = ars.id_algo_rule_strategy WHERE ars.id_tenant = ?",
       AlgoRuleStrategy.ALGO_RULE_STRATEGY_PARAM, AlgoRuleStrategy.TABNAME);
@@ -107,8 +112,9 @@ public class MyDataExportDeleteDefinition {
       """
           DISTINCT d.* FROM %s d JOIN %s ws ON ws.id_securitycurrency = d.id_securitycurrency JOIN watchlist w ON w.id_watchlist = ws.id_watchlist WHERE w.id_tenant = ?
           UNION SELECT d.* FROM dividend d JOIN security s ON d.id_securitycurrency = s.id_securitycurrency WHERE s.id_tenant_private = ?
-          UNION SELECT DISTINCT d.* FROM transaction t JOIN dividend d ON t.id_securitycurrency = d.id_securitycurrency WHERE t.id_tenant = ?""",
-      Dividend.TABNAME, Watchlist.TABNAME_SEC_CUR);
+          UNION SELECT DISTINCT d.* FROM transaction t JOIN dividend d ON t.id_securitycurrency = d.id_securitycurrency WHERE t.id_tenant = ?
+          UNION SELECT d.* FROM %3$s JOIN dividend d ON d.id_securitycurrency = a.id_securitycurrency WHERE tas.id_tenant = ?""",
+      Dividend.TABNAME, Watchlist.TABNAME_SEC_CUR, ALGO_SECURITY_FROM);
   private static String DIVIDEND_DELETE = String.format(
       "d.* FROM %s d JOIN %s s ON d.id_securitycurrency = s.id_securitycurrency WHERE s.id_tenant_private = ?",
       Dividend.TABNAME, Security.TABNAME);
@@ -127,21 +133,28 @@ public class MyDataExportDeleteDefinition {
       JOIN security_derived_link sdl ON s.id_securitycurrency = sdl.id_securitycurrency JOIN security s1 ON s1.id_securitycurrency = sdl.id_link_securitycurrency
       JOIN securitycurrency sc ON s1.id_securitycurrency = sc.id_securitycurrency WHERE t.id_tenant = ? AND sc.dtype = 'S' UNION SELECT s.* FROM correlation_set cs
       JOIN correlation_instrument ci ON cs.id_correlation_set = ci.id_correlation_set JOIN security s ON ci.id_securitycurrency = s.id_securitycurrency WHERE cs.id_tenant = ?
-      UNION SELECT s.* FROM risk_free_rate_mapping rfm JOIN security s ON s.id_securitycurrency = rfm.id_securitycurrency""";
+      UNION SELECT s.* FROM risk_free_rate_mapping rfm JOIN security s ON s.id_securitycurrency = rfm.id_securitycurrency
+      UNION SELECT s.* FROM %1$s JOIN security s ON s.id_securitycurrency = a.id_securitycurrency WHERE tas.id_tenant = ?
+      UNION SELECT s1.* FROM %1$s JOIN security_derived_link sdl ON a.id_securitycurrency = sdl.id_securitycurrency
+      JOIN security s1 ON s1.id_securitycurrency = sdl.id_link_securitycurrency JOIN securitycurrency sc ON s1.id_securitycurrency = sc.id_securitycurrency
+      WHERE tas.id_tenant = ? AND sc.dtype = 'S'""".formatted(ALGO_SECURITY_FROM);
   private static String SECURITY_DELETE = String.format("FROM %s WHERE id_tenant_private = ?", Security.TABNAME);
   private static String SECURITY_DERIVED_LINK = String.format(
       """
           sdl.* FROM %s w JOIN %s wsc ON w.id_watchlist = wsc.id_watchlist JOIN %s s ON wsc.id_securitycurrency = s.id_securitycurrency
           JOIN security_derived_link sdl ON sdl.id_securitycurrency = s.id_securitycurrency WHERE w.id_tenant = ?
           UNION SELECT sdl.* FROM security s JOIN securitycurrency sc ON s.id_securitycurrency = sc.id_securitycurrency
-          JOIN security_derived_link sdl ON sdl.id_securitycurrency = s.id_securitycurrency WHERE s.id_tenant_private = ?""",
-      Watchlist.TABNAME, Watchlist.TABNAME_SEC_CUR, Security.TABNAME);
+          JOIN security_derived_link sdl ON sdl.id_securitycurrency = s.id_securitycurrency WHERE s.id_tenant_private = ?
+          UNION SELECT sdl.* FROM %4$s JOIN security_derived_link sdl ON sdl.id_securitycurrency = a.id_securitycurrency WHERE tas.id_tenant = ?""",
+      Watchlist.TABNAME, Watchlist.TABNAME_SEC_CUR, Security.TABNAME, ALGO_SECURITY_FROM);
   private static String SECURITYSPLIT_SELECT = String.format(
       """
           DISTINCT ss.* FROM %s ss JOIN watchlist_sec_cur ws ON ws.id_securitycurrency = ss.id_securitycurrency JOIN %s w ON w.id_watchlist = ws.id_watchlist
           WHERE w.id_tenant = ? UNION SELECT ss.* FROM %s ss JOIN security s ON ss.id_securitycurrency = s.id_securitycurrency WHERE s.id_tenant_private = ?
-          UNION SELECT DISTINCT ss.* FROM %s t JOIN %s ss ON t.id_securitycurrency = ss.id_securitycurrency WHERE t.id_tenant = ?""",
-      Securitysplit.TABNAME, Watchlist.TABNAME, Securitysplit.TABNAME, Transaction.TABNAME, Securitysplit.TABNAME);
+          UNION SELECT DISTINCT ss.* FROM %s t JOIN %s ss ON t.id_securitycurrency = ss.id_securitycurrency WHERE t.id_tenant = ?
+          UNION SELECT ss.* FROM %6$s JOIN securitysplit ss ON ss.id_securitycurrency = a.id_securitycurrency WHERE tas.id_tenant = ?""",
+      Securitysplit.TABNAME, Watchlist.TABNAME, Securitysplit.TABNAME, Transaction.TABNAME, Securitysplit.TABNAME,
+      ALGO_SECURITY_FROM);
   private static String SECURITYSPLIT_DELETE = String.format(
       "ss.* FROM %s s, %s ss WHERE s.id_securitycurrency = ss.id_securitycurrency AND s.id_tenant_private = ?",
       Security.TABNAME, Securitysplit.TABNAME);
@@ -158,10 +171,15 @@ public class MyDataExportDeleteDefinition {
       JOIN security_derived_link sdl ON s.id_securitycurrency = sdl.id_securitycurrency JOIN security s1 ON s1.id_securitycurrency = sdl.id_link_securitycurrency
       JOIN securitycurrency sc ON s1.id_securitycurrency = sc.id_securitycurrency WHERE t.id_tenant = ? AND sc.dtype = 'S' UNION SELECT sc.* FROM correlation_set cs
       JOIN correlation_instrument ci ON cs.id_correlation_set = ci.id_correlation_set JOIN securitycurrency sc ON ci.id_securitycurrency = sc.id_securitycurrency WHERE sc.dtype = 'S' AND cs.id_tenant = ?
-      UNION SELECT sc.* FROM risk_free_rate_mapping rfm JOIN securitycurrency sc ON sc.id_securitycurrency = rfm.id_securitycurrency WHERE sc.dtype = 'S'""";
-  private static String SECURITYCURRENCY_DELETE = String.format(
-      "sc.* FROM %s sc, %s s WHERE sc.id_securitycurrency = s.id_securitycurrency AND id_tenant_private = ?",
-      Securitycurrency.TABNAME, Security.TABNAME);
+      UNION SELECT sc.* FROM risk_free_rate_mapping rfm JOIN securitycurrency sc ON sc.id_securitycurrency = rfm.id_securitycurrency WHERE sc.dtype = 'S'
+      UNION SELECT sc.* FROM %1$s JOIN securitycurrency sc ON sc.id_securitycurrency = a.id_securitycurrency WHERE tas.id_tenant = ?
+      UNION SELECT sc.* FROM %1$s JOIN security_derived_link sdl ON a.id_securitycurrency = sdl.id_securitycurrency
+      JOIN securitycurrency sc ON sc.id_securitycurrency = sdl.id_link_securitycurrency WHERE tas.id_tenant = ? AND sc.dtype = 'S'""".formatted(ALGO_SECURITY_FROM);
+  private static String SECURITYCURRENCY_DELETE = "FROM securitycurrency WHERE id_securitycurrency = ?";
+  private static String PRIVATE_SECURITY_IDS = "SELECT id_securitycurrency FROM security WHERE id_tenant_private = ?";
+  private static String PRIVATE_SECURITY_TASK_DELETE = """
+      FROM task_data_change WHERE entity = 'Security'
+        AND id_entity IN (SELECT id_securitycurrency FROM security WHERE id_tenant_private = ? )""";
   private static String CURRENCYPAIR_SELECT = """
       c1.* FROM currencypair c1, securitycurrency sc, (SELECT DISTINCT s.currency as fromcurrency, e.currency as tocurrency
       FROM tenant e, portfolio p, securitycashaccount sc, transaction t, security s WHERE e.id_tenant = ? AND e.id_tenant = p.id_portfolio
@@ -183,7 +201,9 @@ public class MyDataExportDeleteDefinition {
       JOIN securitycurrency sc ON c.id_securitycurrency = sc.id_securitycurrency WHERE t.id_tenant = ? AND sc.dtype = 'C' UNION SELECT c.* FROM watchlist w
       JOIN watchlist_sec_cur ws ON w.id_watchlist = ws.id_watchlist JOIN currencypair c ON c.id_securitycurrency = ws.id_securitycurrency WHERE w.id_tenant = ?
       UNION SELECT cp.* FROM correlation_set cs JOIN correlation_instrument ci ON cs.id_correlation_set = ci.id_correlation_set JOIN currencypair cp
-      ON ci.id_securitycurrency = cp.id_securitycurrency WHERE cs.id_tenant = ?""";
+      ON ci.id_securitycurrency = cp.id_securitycurrency WHERE cs.id_tenant = ?
+      UNION SELECT c.* FROM %1$s JOIN security_derived_link sdl ON a.id_securitycurrency = sdl.id_securitycurrency
+      JOIN currencypair c ON c.id_securitycurrency = sdl.id_link_securitycurrency WHERE tas.id_tenant = ?""".formatted(ALGO_SECURITY_FROM);
   private static String SECURITYCURRENCY_C_SELECT = """
       sc.* FROM currencypair c1, securitycurrency sc, (SELECT DISTINCT s.currency as fromcurrency, e.currency as tocurrency
       FROM tenant e, portfolio p, securitycashaccount sc, transaction t, security s WHERE e.id_tenant = ? AND e.id_tenant = p.id_portfolio
@@ -205,7 +225,10 @@ public class MyDataExportDeleteDefinition {
       JOIN securitycurrency sc ON c.id_securitycurrency = sc.id_securitycurrency WHERE t.id_tenant = ? AND sc.dtype = 'C' UNION SELECT sc.* FROM watchlist w
       JOIN watchlist_sec_cur ws ON w.id_watchlist = ws.id_watchlist JOIN securitycurrency sc ON sc.id_securitycurrency = ws.id_securitycurrency
       WHERE sc.dtype = 'C' AND w.id_tenant = ? UNION SELECT sc.* FROM correlation_set cs JOIN correlation_instrument ci ON cs.id_correlation_set = ci.id_correlation_set
-      JOIN securitycurrency sc ON ci.id_securitycurrency = sc.id_securitycurrency WHERE sc.dtype = 'C' AND cs.id_tenant = ?""";
+      JOIN securitycurrency sc ON ci.id_securitycurrency = sc.id_securitycurrency WHERE sc.dtype = 'C' AND cs.id_tenant = ?
+      UNION SELECT sc.* FROM %1$s JOIN security_derived_link sdl ON a.id_securitycurrency = sdl.id_securitycurrency
+      JOIN currencypair c ON c.id_securitycurrency = sdl.id_link_securitycurrency JOIN securitycurrency sc ON c.id_securitycurrency = sc.id_securitycurrency
+      WHERE tas.id_tenant = ?""".formatted(ALGO_SECURITY_FROM);
   private static String HISTORYQUOTE_SELECT = """
       DISTINCT h.* FROM transaction t JOIN security s ON t.id_securitycurrency = s.id_securitycurrency JOIN historyquote h ON s.id_securitycurrency = h.id_securitycurrency
       WHERE t.id_tenant = ? AND s.active_to_date < now() + interval 1 month
@@ -234,17 +257,23 @@ public class MyDataExportDeleteDefinition {
       UNION SELECT hl.* FROM correlation_set cs JOIN correlation_instrument ci ON cs.id_correlation_set = ci.id_correlation_set
       JOIN security s ON ci.id_securitycurrency = s.id_securitycurrency JOIN historyquote_legacy hl ON hl.id_securitycurrency = s.id_securitycurrency
       WHERE cs.id_tenant = ?
-      UNION SELECT hl.* FROM risk_free_rate_mapping rfm JOIN historyquote_legacy hl ON hl.id_securitycurrency = rfm.id_securitycurrency""";
+      UNION SELECT hl.* FROM risk_free_rate_mapping rfm JOIN historyquote_legacy hl ON hl.id_securitycurrency = rfm.id_securitycurrency
+      UNION SELECT hl.* FROM %1$s JOIN historyquote_legacy hl ON hl.id_securitycurrency = a.id_securitycurrency WHERE tas.id_tenant = ?
+      UNION SELECT hl.* FROM %1$s JOIN security_derived_link sdl ON a.id_securitycurrency = sdl.id_securitycurrency
+      JOIN securitycurrency sc ON sc.id_securitycurrency = sdl.id_link_securitycurrency JOIN historyquote_legacy hl ON hl.id_securitycurrency = sc.id_securitycurrency
+      WHERE tas.id_tenant = ? AND sc.dtype = 'S'""".formatted(ALGO_SECURITY_FROM);
   // Restricted the same way as the history quote periods: a marker names a security, so exporting the whole table
   // would reference instruments the dump does not carry and the re-import would fail on the foreign key.
   private static String BANKRUPT_SECURITY_SELECT = """
       bs.* FROM bankrupt_security bs JOIN security s ON bs.id_securitycurrency = s.id_securitycurrency WHERE s.id_tenant_private = ?
       UNION SELECT DISTINCT bs.* FROM watchlist w JOIN watchlist_sec_cur wsc ON w.id_watchlist = wsc.id_watchlist JOIN bankrupt_security bs ON wsc.id_securitycurrency = bs.id_securitycurrency
-      WHERE w.id_tenant = ? UNION SELECT DISTINCT bs.* FROM transaction t JOIN bankrupt_security bs ON t.id_securitycurrency = bs.id_securitycurrency WHERE t.id_tenant = ?""";
+      WHERE w.id_tenant = ? UNION SELECT DISTINCT bs.* FROM transaction t JOIN bankrupt_security bs ON t.id_securitycurrency = bs.id_securitycurrency WHERE t.id_tenant = ?
+      UNION SELECT bs.* FROM %1$s JOIN bankrupt_security bs ON bs.id_securitycurrency = a.id_securitycurrency WHERE tas.id_tenant = ?""".formatted(ALGO_SECURITY_FROM);
   private static String HISTORYQUOTEPERIOD_SELECT = """
       hp.* FROM historyquote_period hp JOIN security s ON hp.id_securitycurrency = s.id_securitycurrency WHERE s.id_tenant_private = ?
       UNION SELECT DISTINCT hp.* FROM watchlist w JOIN watchlist_sec_cur wsc ON w.id_watchlist = wsc.id_watchlist JOIN historyquote_period hp ON wsc.id_securitycurrency = hp.id_securitycurrency
-      WHERE w.id_tenant = ? UNION SELECT DISTINCT hp.* FROM transaction t JOIN historyquote_period hp ON t.id_securitycurrency = hp.id_securitycurrency WHERE t.id_tenant = ?""";
+      WHERE w.id_tenant = ? UNION SELECT DISTINCT hp.* FROM transaction t JOIN historyquote_period hp ON t.id_securitycurrency = hp.id_securitycurrency WHERE t.id_tenant = ?
+      UNION SELECT hp.* FROM %1$s JOIN historyquote_period hp ON hp.id_securitycurrency = a.id_securitycurrency WHERE tas.id_tenant = ?""".formatted(ALGO_SECURITY_FROM);
   private static String HISTORYQUOTEPERIOD_DELETE = String.format(
       "hp.* FROM %s hp JOIN %s s ON hp.id_securitycurrency = s.id_securitycurrency WHERE s.id_tenant_private = ?",
       HistoryquotePeriod.TABNAME, Security.TABNAME);
@@ -341,7 +370,7 @@ public class MyDataExportDeleteDefinition {
       new ExportDefinition(Securitycurrency.TABNAME, TENANT_USER.ID_TENANT, SECURITYCURRENCY_S_SELECT,
           ExportDefinition.EXPORT_USE),
       new ExportDefinition(Securitycurrency.TABNAME, TENANT_USER.ID_TENANT, SECURITYCURRENCY_DELETE,
-          ExportDefinition.DELETE_USE | ExportDefinition.CHANGE_USER_ID_FOR_CREATED_BY),
+          ExportDefinition.DELETE_USE | ExportDefinition.CHANGE_USER_ID_FOR_CREATED_BY, PRIVATE_SECURITY_IDS),
       new ExportDefinition(Security.TABNAME, TENANT_USER.ID_TENANT, SECURITY_DELETE, ExportDefinition.DELETE_USE),
       new ExportDefinition(Security.TABNAME, TENANT_USER.ID_TENANT, SECURITY_SELECT, ExportDefinition.EXPORT_USE),
       // Instruments without further price data — shared reference data. Never deleted with an account: the marker is
@@ -458,12 +487,14 @@ public class MyDataExportDeleteDefinition {
 
       // A historical replay and its audit trail belong to the simulation environment, which is a tenant of its own.
       // Deleting that environment therefore removes them through this array, in the backward pass that sees the event
-      // log before the result it references. They are exported for the same reason the recommendations are: the
-      // decisions taken on the user's own data are the user's own data.
-      new ExportDefinition(AlgoSimulationResult.TABNAME, TENANT_USER.ID_TENANT, null,
-          ExportDefinition.EXPORT_USE | ExportDefinition.DELETE_USE),
-      new ExportDefinition(AlgoEventLog.TABNAME, TENANT_USER.ID_TENANT, null,
-          ExportDefinition.EXPORT_USE | ExportDefinition.DELETE_USE)
+      // log before the result it references. They are delete-only: both are pure system output of a simulation, which
+      // the target instance restores by running the simulation again.
+      new ExportDefinition(AlgoSimulationResult.TABNAME, TENANT_USER.ID_TENANT, null, ExportDefinition.DELETE_USE),
+      new ExportDefinition(AlgoEventLog.TABNAME, TENANT_USER.ID_TENANT, null, ExportDefinition.DELETE_USE),
+      // The backward deletion pass removes pending work while private instrument ownership is still available.
+      // Shared instrument tasks remain valid, regardless of which tenant context originally submitted them.
+      new ExportDefinition("task_data_change", TENANT_USER.ID_TENANT, PRIVATE_SECURITY_TASK_DELETE,
+          ExportDefinition.DELETE_USE)
 
   };
 
